force-app/main/default/objects/Insurance_Underwriting_Rule__c/Insurance_Underwriting_Rule__c.object-meta.xml
<CustomObject>
    <label>Insurance Underwriting Rule</label>
    <nameField>
        <displayFormat>UR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Underwriting Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>