force-app/main/default/objects/Insurance_Underwriting_Rule__c/fields/MaxAge__c.field-meta.xml
<CustomField>
    <fullName>MaxAge__c</fullName>
    <label>Max Age</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>