force-app/main/default/objects/Insurance_Underwriting_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Usage__c</columns>
    <columns>VehicleType__c</columns>
    <columns>MaxAge__c</columns>
    <columns>MinAge__c</columns>
    <columns>Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>